@@ -22,7 +22,7 @@ protected:
 
 	enum display_mode { display_mode_gauges, display_mode_periscope,
 		display_mode_uzo, display_mode_glasses, display_mode_bridge,
-		display_mode_map, display_mode_torpedoroom, display_mode_damagecontrol,
+		display_mode_map, display_mode_torpedoroom, display_mode_damagestatus,
 		display_mode_logbook, display_mode_successes, display_mode_freeview };
 	submarine_interface();
 	submarine_interface& operator= (const submarine_interface& other);
