@@ -1,3 +1,6 @@
+2003-06-07  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* shifted damage display to own class, some adds.
+
 2003-05-30  Thorsten Jordan <thorsten_jordan@gmx.de>
 
 	* global_data.h, global_data.cpp
